--- a/style.css
+++ b/style.css
@@ -2,8 +2,12 @@
 * {
   margin: 0;
   box-sizing: border-box;
-  user-select: none;
+  -webkit-touch-callout: none;
   -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 /* Wrapper */
@@ -35,21 +39,12 @@
   overflow: hidden;
 }
 
-/* Center the images inside their containers */
-.bottom img,
-.middle img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: cover;
-}
-
 .bottom { background: #2196f3; }
 .middle { background: #bbdefb; }
-.top    { background: #ffffff; width: 125px; }
+.top    { 
+  background: #ffffff; 
+  width: 125px; 
+}
 
 /* Scroller */
 .scroller {
@@ -68,8 +63,14 @@
   box-shadow: 3.5px 0px 7px rgba(100, 100, 100, 0.2);
 }
 
-.scroller:hover { opacity: 1; }
-.scrolling { pointer-events: none; opacity: 1; }
+.scroller:hover {
+  opacity: 1;
+}
+
+.scrolling {
+  pointer-events: none;
+  opacity: 1;
+}
 
 .scroller__thumb {
   width: 100%;
@@ -78,8 +79,7 @@
   padding: 7px;
 }
 
-.scroller:before,
-.scroller:after {
+.scroller:before, .scroller:after {
   content: " ";
   display: block;
   width: 7px;
@@ -95,11 +95,19 @@
 .scroller:before { top: 49px; }
 .scroller:after  { bottom: 49px; }
 
-/* Color scheme */
+.scroller-middle {
+  margin-top: 25px;
+}
+
 .scroller-middle > .scroller__thumb {
   border: 5px solid #FFCCBC;
 }
+
 .scroller-middle:before,
 .scroller-middle:after {
   background: #FFCCBC;
 }
+
+/* Notes:
+ * To change colors, ensure you update the fill in the SVGs to match.
+ */
