--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
-/* Normalize CSS */
+
+/* Our normalize css */
 * {
   margin: 0;
   box-sizing: border-box;
-  user-select: none;
+  -webkit-touch-callout: none;
   -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-/* Wrapper */
+/* Our wrapper */
 .wrapper {
   width: 100%;
   height: 480px;
@@ -16,12 +21,15 @@
   top: 50%;
   transform: translate3d(-50%, -50%, 0);
   overflow: hidden;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19),
-              0 6px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-/* Image layers */
-.bottom, .middle, .top {
+
+
+/* Our image information */
+.bottom,
+.middle,
+.top {
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
@@ -35,23 +43,23 @@
   overflow: hidden;
 }
 
-/* Center the images inside their containers */
-.bottom img,
-.middle img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: cover;
+
+.bottom {
+  background: #2196f3;
 }
 
-.bottom { background: #2196f3; }
-.middle { background: #bbdefb; }
-.top    { background: #ffffff; width: 125px; }
+.middle {
+  background: #bbdefb;
+}
 
-/* Scroller */
+.top {
+  background: #ffffff;
+}
+
+.top {
+  width: 125px;
+}
+
 .scroller {
   width: 50px;
   height: 50px;
@@ -68,8 +76,18 @@
   box-shadow: 3.5px 0px 7px rgba(100, 100, 100, 0.2);
 }
 
-.scroller:hover { opacity: 1; }
-.scrolling { pointer-events: none; opacity: 1; }
+.scroller-middle {
+  margin-top: 25px;
+}
+
+.scroller:hover {
+  opacity: 1;
+}
+
+.scrolling {
+  pointer-events: none;
+  opacity: 1;
+}
 
 .scroller__thumb {
   width: 100%;
@@ -92,14 +110,99 @@
   box-shadow: 3.5px 0px 7px rgba(100, 100, 100, 0.2);
 }
 
-.scroller:before { top: 49px; }
-.scroller:after  { bottom: 49px; }
+.scroller:before {
+  top: 49px;
+}
 
-/* Color scheme */
-.scroller-middle > .scroller__thumb {
+.scroller:after {
+  bottom: 49px;
+}
+
+/* If you want to change the colors, make sure you change the fill in the svgs to match */
+.scroller-middle>.scroller__thumb {
   border: 5px solid #FFCCBC;
 }
+
 .scroller-middle:before,
 .scroller-middle:after {
   background: #FFCCBC;
+}
+
+.bottom {
+  background: #2196f3;
+}
+
+.middle {
+  background: #bbdefb;
+}
+
+.top {
+  background: #ffffff;
+}
+
+.top {
+  width: 125px;
+}
+
+.scroller {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: 100px;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.9;
+  transition: opacity 0.12s ease-in-out;
+  pointer-events: auto;
+  cursor: pointer;
+  box-shadow: 3.5px 0px 7px rgba(100, 100, 100, 0.2);
+}
+
+.scroller-middle {
+  margin-top: 25px;
+}
+
+.scroller:hover {
+  opacity: 1;
+}
+
+.scrolling {
+  pointer-events: none;
+  opacity: 1;
+}
+
+.scroller__thumb {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  padding: 7px;
+}
+
+.scroller:before,
+.scroller:after {
+  content: " ";
+  display: block;
+  width: 7px;
+  height: 9999px;
+  position: absolute;
+  left: 50%;
+  margin-left: -3.5px;
+  z-index: 30;
+  transition: 0.1s;
+  box-shadow: 3.5px 0px 7px rgba(100, 100, 100, 0.2);
+}
+
+.scroller:before {
+  top: 49px;
+}
+
+.scroller:after {
+  bottom: 49px;
+}
+
+/* If you want to change the colors, make sure you change the fill in the svgs to match */
+.scroller-middle>.scroller__thumb {
+  border: 5px solid #FFCCBC;
 }
